# Thetis

./: .buildinfo  .gitignore  CITATION.cff  LICENSE.md  README.md  api.html  aspects.html  compliance.html  configuration.html  data.html  examples.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  setup.py  subscription.html
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: documentation.yaml
_sources/: api.rst.txt  aspects.rst.txt  configuration.rst.txt  data.rst.txt  index.rst.txt  quickstart.rst.txt  subscription.rst.txt
_sources/evaluation-aspects/: data_evaluation.rst.txt  fairness.rst.txt  performance.rst.txt  uncertainty.rst.txt
_sources/safety-aspects/: data_evaluation.rst.txt  explainability.rst.txt  fairness.rst.txt  robustness.rst.txt  uncertainty.rst.txt
_static/css/: text.css  toggle.css
docs/: requirements.txt
docs/source/: api.rst  bibliography.bib  compliance.rst  conf.py  configuration.rst  data.rst  examples.rst  index.rst  installation.rst  quickstart.rst  subscription.rst
docs/source/evaluation-aspects/: performance.rst  robustness.rst
docs/source/safety-aspects/: data_evaluation.rst  fairness.rst  performance.rst  uncertainty.rst
evaluation-aspects/: data_evaluation.html  fairness.html  performance.html  robustness.html  uncertainty.html
examples/: README.md  classification.ipynb  demo_config_classification.yaml  demo_config_detection.yaml  demo_config_regression.yaml  detection.ipynb  regression.ipynb
safety-aspects/: data_evaluation.html  explainability.html  fairness.html  performance.html  robustness.html  uncertainty.html
thetis/: __init__.py  io.py  mlflow.py  service.py
