[build-system]
requires = ["setuptools", "toml", "pandas"]
build-backend = "setuptools.build_meta"

[project]
name = "thetis"
description = "Service to examine data processing pipelines (e.g., machine learning or deep learning pipelines) for uncertainty consistency (calibration), fairness, and other safety-relevant aspects."
requires-python = ">=3.8"
authors = [
    { email = "fabian.kueppers@efs-techhub.com" },
    { name = "e:fs TechHub GmbH" }
]
maintainers = [
    { email = "fabian.kueppers@efs-techhub.com" },
    { name = "e:fs TechHub GmbH" }
]

license = {text = "Proprietary"}

keywords = [
    "ai",
    "safety",
    "security",
    "fairness",
    "robustness",
    "calibration",
    "uncertainty",
    "neural",
    "network",
    "machine",
    "learning",
    "confidence",
    "classification",
    "object",
    "detection",
    "regression",
    "thetis",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dynamic = ["version", "dependencies"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://efs-techhub.com/efs-portfolio/loesungen/thetis"
GitHub = "https://github.com/EFS-OpenSource/Thetis"
Documentation = "https://efs-opensource.github.io/Thetis"

[tool.setuptools.dynamic]
version = { attr = "thetis.__version__" }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
exclude = ["img", "output", "docs"]
